<resources>
    <string name="app_name">Think&amp;Share</string>
    <string name="title_activity_main">All ideas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>

    <!--Screen titles-->
    <string name="title_home">Ideas</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_create_idea">Create idea</string>
    <string name="title_chat">Chat</string>
    <string name="title_followers">Followers</string>

    <!--Tabs titles-->

</resources>
