<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_black_24px"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        android:icon="@drawable/ic_information_outline"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />
</menu>
